fixed cursor flicker

--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ a:hover {
   z-index: 99;
   background-color: transparent;
   padding: 0.5rem 1.5rem;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   border: 1px solid #ffffff;
